[project]
name = "analysis-scripts"
version = "0.1.0"
description = "A project for various analysis tools."
dependencies = [
    "numpy==1.26.4",
    "scipy>=1.15.2",
    "matplotlib>=3.9.3",
    "lcm>=1.5.1,<2",
    # aspn-generated main branch - committed 21 April 2026
    "aspn23 @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=aspn-py",
    "aspn23_lcm @ git+https://github.com/is4s/aspn-generated.git@7e1f35bc84b90c6d361e690601448f8087e1a626#subdirectory=lcm/python",
    "navtk",
    "pyyaml>=6.0.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["analysis-lcm", "analysis-ros"]

[tool.uv.sources]
analysis-lcm = { workspace = true }
analysis-ros = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.4.5",
    "pip>=24.0",
    "analysis-lcm",
    "analysis-ros",
]

[tool.ruff.lint]
extend-select = ["I"]
select = ["D", "D213"]
ignore = ["D212", "D417"]

[tool.ruff.lint.per-file-ignores]
"analysis-lcm/*" = ["D"]
"analysis-ros/*" = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"
