[project]
name = "analysis-ros"
version = "0.1.0"
description = "Analysis tools for ROS logs."
dependencies = ["analysis-lcm"]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]

[project.scripts]
lcm_to_ros = 'analysis.ros.convert_log_to_ros:main'
